# ArylEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
Aryl/: Aryl.cmake  ylpch.h
Aryl/Aryl/: EntryPoint.h
Aryl/Aryl/Components/: Components.h
Aryl/Aryl/Core/: Application.cpp  Application.h  Base.cpp  Base.h  Buffer.h  Profiler.h  Random.cpp  Random.h  Time.cpp  Time.h  TimeStep.cpp  TimeStep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Aryl/Aryl/Core/Layer/: LayerStack.cpp  LayerStack.h
Aryl/Aryl/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Aryl/Aryl/ImGui/: ImGuiImplementation.cpp  ImGuiImplementation.h
Aryl/Aryl/Input/: KeyCodes.h
Aryl/Aryl/Log/: Log.cpp
Aryl/Aryl/Network/: NetContext.cpp  NetContext.h  NetManager.h  NetMessageTypes.h  NetPacket.h
Aryl/Aryl/Network/Host/: Client.cpp  Client.h  Host.cpp  Host.h  HostSettings.h  Server.cpp  Server.h
Aryl/Aryl/Network/Interfaces/IPv4/: IPv4Address.h  IPv4Endpoint.h
Aryl/Aryl/Network/Socket/: UdpSocket.cpp  UdpSocket.h  UdpSocketBuilder.cpp  UdpSocketBuilder.h  UdpSocketReceiver.cpp  UdpSocketReceiver.h  UdpSocketSender.cpp  UdpSocketSender.h
Aryl/Aryl/Networking/: NetAPI.h  NetContext.cpp  NetContext.h  NetManager.cpp  NetManager.h  NetMessageTypes.h  NetPacket.cpp  NetPacket.h
Aryl/Aryl/Networking/Interfaces/IPv4/: IPv4Address.h  IPv4Endpoint.h
Aryl/Aryl/Networking/Socket/: UdpSocket.cpp  UdpSocket.h  UdpSocketBuilder.cpp  UdpSocketBuilder.h  UdpSocketReceiver.cpp  UdpSocketReceiver.h  UdpSocketSender.cpp  UdpSocketSender.h
Aryl/Aryl/Platform/Networking/Asio/: AsioContext.h
Aryl/Aryl/Platform/Networking/Asio/Interfaces/IPv4/: AsioIPv4Address.h  AsioIPv4Endpoint.h
Aryl/Aryl/Platform/Networking/Asio/Socket/: AsioUdpSocket.cpp  AsioUdpSocket.h  AsioUdpSocketBuilder.cpp  AsioUdpSocketBuilder.h  AsioUdpSocketReceiver.cpp  AsioUdpSocketReceiver.h  AsioUdpSocketSender.cpp  AsioUdpSocketSender.h
Aryl/Aryl/Platform/Rendering/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Aryl/Aryl/Reflection/: ReflectionMacros.h
Aryl/Aryl/Renderer/: Buffer.cpp  Buffer.h  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererContext.cpp  RendererContext.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Aryl/Aryl/Renderer/Camera/: Camera.cpp  Camera.h
Aryl/Aryl/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Aryl/Platform/Network/Asio/: AsioContext.h
Aryl/Platform/Network/Asio/Socket/: AsioUdpSocket.cpp  AsioUdpSocket.h  AsioUdpSocketBuilder.cpp  AsioUdpSocketBuilder.h  AsioUdpSocketReceiver.cpp  AsioUdpSocketReceiver.h  AsioUdpSocketSender.cpp  AsioUdpSocketSender.h
Aryl/Platform/Networking/Asio/Socket/: AsioUdpSocket.h  AsioUdpSocketBuilder.h  AsioUdpSocketReceiver.h  AsioUdpSocketSender.cpp  AsioUdpSocketSender.h
Aryl/Platform/Renderer/OpenGL/: OpenGLContext.cpp  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h
Aryl/Platform/Rendering/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLContext.h  OpenGLShader.cpp  OpenGLTexture.cpp
Aryl/src/Aryl/: EntryPoint.h
Aryl/src/Aryl/Core/: Application.cpp  Application.h  Buffer.h  UUID.cpp  UUID.h  Window.cpp
Aryl/src/Aryl/Core/Layer/: Layer.h  LayerStack.cpp
Aryl/src/Aryl/Events/: ApplicationEvent.h  MouseEvent.h
Aryl/src/Aryl/Log/: Log.h
Editor/: Editor.cmake  EditorApp.cpp  edpch.h
Editor/Editor/: Editor.cpp  Editor.h  NetworkTesting.cpp  NetworkTesting.h  RendererTesting.cpp  RendererTesting.h
Editor/src/Editor/: EditorApp.cpp
Game/: Game.cmake
Game/Game/: Game.cpp  Game.h
Launcher/: Launcher.cmake  LauncherApp.cpp
Launcher/Launcher/: Launcher.cpp  Launcher.h
Scripts/: GenProjects.bat  GenProjects.sh
